discussion/kv_engine/173825/173825_rev4_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-51719: CBStatCollector::formatKey Simplify dynamic format args handling

As per comments in CBStatCollector::formatKey helper function
formatFromMap, the handling of dynamic format arguments is signicanlty
simpler with the introduction of dynamic labelled arguments in fmtlib
8 - see https://fmt.dev/latest/api.html#named-arguments

Remove the somewhat complex manual handling of this and delegate to
fmtlib.

Change-Id: I7c070cf327cb19f4db88d257e1cd768281c0b89a

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Dave Rigby
Date: 2022-04-20 13:31:19.000000000
Message: 
Uploaded patch set 4.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-04-20 13:51:22.000000000
Message: 
Patch Set 4: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/6524/ : ABORTED

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/45414/ : FAILURE

Compile error at ..\kv_engine\statistics\cbstat_collector.cc(14): fatal error C1083: Cannot open include file: "fmt/args.h": No such file or directory ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/45414/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/38152/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/statistics/cbstat_collector.cc:14:10:
fatal error: "fmt/args.h" file not found
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/38152/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/16796/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/statistics/cbstat_collector.cc:14:10: error: "fmt/args.h" file not found [clang-diagnostic-error]
#include <fmt/args.h>
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/16796/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/statistics/cbstat_collector.cc:14:10:
error: "fmt/args.h" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/16796/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/19618/ : FAILURE

Compile error at [2022-04-20T13:39:13.484Z] ../kv_engine/statistics/cbstat_collector.cc:14:10:
fatal error: "fmt/args.h" file not found
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/19618/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/26984/ : FAILURE

Compile error at [2022-04-20T13:49:06.889Z] ../kv_engine/statistics/cbstat_collector.cc:14:10:
fatal error: "fmt/args.h" file not found
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/26984/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/18579/ : FAILURE

Compile error at [2022-04-20T13:43:37.583Z] ../kv_engine/statistics/cbstat_collector.cc:14:10:
fatal error: fmt/args.h: No such file or directory
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/18579/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/17676/ : FAILURE

Compile error at [2022-04-20T13:39:07.994Z] ../kv_engine/statistics/cbstat_collector.cc:14:10:
fatal error: "fmt/args.h" file not found
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/17676/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/6453/ : FAILURE

Compile error at [2022-04-20T13:42:08.266Z] ../kv_engine/statistics/cbstat_collector.cc:14:10:
fatal error: "fmt/args.h" file not found
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/6453/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/18915/ : FAILURE

Compile error at [2022-04-20T13:48:05.323Z] ../kv_engine/statistics/cbstat_collector.cc:14:10:
fatal error: fmt/args.h: No such file or directory
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/18915/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/15730/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-04-20 13:51:23.000000000
Message: 
Patch Set 4: Verified-1 -Code-Review

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/26980/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/26980/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/6452/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/6452/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/19615/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/19615/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/18577/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/18577/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/18912/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/18912/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/17672/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/17672/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/6514/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/6514/ )
----------------------------------------------------------------------------------------------------------------------
